<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Health Mate</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refrash</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_addReminder">addReminder</string>
    <string name="action_removeReminder">removeReminder</string>
    <string name="action_search">search</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Congratulations!\nYou pass!</string>
    <string name="test">terry test</string>
    <string name="sign_up">Please input your personal information.</string>
    <string name="sign_in_txt">sign in</string>
    <string name="sign_up_link">Create an account</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome !</string>
    <string name="text1">text 1</string>
    <string name="text2">text 2</string>
    <string name="remember_me">Remember me</string>
    <string name="agree_terms">I agree to My Health Mate Terms</string>
    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_dob">DOB</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_hypertension">Hypertension</string>
    <string name="profile_diabetes">Diabetes</string>
    <string name="profile_insomnia">Insomnia</string>
    <string name="profile_cardio">Cardio</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
    <string name="account_deactivate">Deactivate</string>
    <string name="deactivate_account">Please enter password to deactivate account</string>
    <string name="btn_deactivate">Deactivate account</string>
    <string name="settings_change_name">Change name</string>
    <string name="settings_change_password">Change password</string>
    <string name="bp">Diastolic:</string>
    <string name="bp_high">Systolic:</string>
    <string name="hr">HR:</string>
    <string name="sleep">Sleep:</string>
    <string name="activity">Activity:</string>
    <string name="chart_double_next">&gt;&gt;</string>
    <string name="chart_next">&gt;</string>
    <string name="chart_prev">&lt;</string>
    <string name="chart_double_prev">&lt;&lt;</string>
    <string name="app_label">search label</string>
    <string name="search_hint">search hint</string>
    <string name="terry_test">terry test</string>
    <string name="nicole_test">Nicole Test</string>
    <string name="history_1week">One week</string>
    <string name="history_1month">One month</string>
    <string name="history_3month">Three months</string>
    <string name="history_share">Share</string>
    <string name="history_export">Export</string>
    <string name="home_tag">Tag</string>
    <string name="monitor_status">Status</string>
    <string name="approval">Approve</string>
    <string name="med_name">Name</string>
    <string name="description">Description</string>
    <string name="effect">Effect</string>
    <string name="start_time">Start time</string>
    <string name="repeat">Repeat</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="med_record">Current Medication</string>
    <string name="profile">Profile</string>
    <string name="time">Time</string>
    
    <string-array name="news_headlines">
        <item>Two brooms are getting married. Before the ceremony, the bride broom says to the groom broom, "I think I'm going to have a whisk."
The groom broom says, How can that be possible? We havent even swept together!"</item>
        <item>A man cheats on his girlfriend named Lorraine with a girl named Clearly.

Suddenly, Lorraine died.

At the funeral, the man stands up and sings, I can see Clearly now, Lorraine is gone.</item>
        <item>Q: What is the difference between a girlfriend and a wife?

A: 45 lbs.

Q: What is the difference between a boyfriend and a husband?

A: 45 minutes.</item>
        <item>            Q: What is the difference between a divorce and a circumcision?

A: In a divorce, you get rid of the whole schmuck.</item>
    </string-array>

</resources>