<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginLeft="@dimen/gen_page_margin_left"
    android:layout_marginRight="@dimen/gen_page_margin_right">
 
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="8dip"
        android:useDefaultMargins="true" >
 
        <TextView
            android:layout_column="0"
            android:text="@string/profile_name"
            style="@style/profile_textview" />
        <EditText
            android:id="@+id/txtbox_name"
            style="@style/profile_edittext" >
        </EditText>
 
        <TextView
            android:layout_column="0"
            android:text="@string/profile_gender"
            style="@style/profile_textview" />
        <EditText
            android:id="@+id/txtbox_gender"
            style="@style/profile_edittext" >
        </EditText>
 <!--  
        <Spinner
            android:id="@+id/size"
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal" />
 -->
        <TextView
            android:layout_column="0"
            android:text="@string/profile_dob"
            style="@style/profile_textview" />
        <EditText
            android:id="@+id/txtbox_dob"
            style="@style/profile_edittext" >
        </EditText>
 
        <TextView
            android:layout_column="0"
            android:text="@string/profile_height"
            style="@style/profile_textview" />
        <EditText
            android:id="@+id/txtbox_height"
            style="@style/profile_edittext" >
        </EditText>
 
        <TextView
            android:layout_column="0"
            android:text="@string/profile_weight"
            style="@style/profile_textview" />
        <EditText
            android:id="@+id/txtbox_weight"
            style="@style/profile_edittext" >
        </EditText>
        
        <TextView
            android:layout_column="0"
            android:text="@string/profile_hypertension"
            style="@style/profile_textview" />
        
        <TextView
            android:layout_column="0"
            android:text="@string/profile_diabetes"
            style="@style/profile_textview" />
        
        <TextView
            android:layout_column="0"
            android:text="@string/profile_insomnia"
            style="@style/profile_textview" />
        
        <TextView
            android:layout_column="0"
            android:text="@string/profile_cardio"
            style="@style/profile_textview" />
 
    </GridLayout>
</ScrollView>