<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/edit_profile"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_addReminder"/>
   <item
        android:id="@+id/add_medicine"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_settings"/>
   <item
        android:id="@+id/delete_med"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_removeReminder"/>
</menu>