<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:background="@drawable/textlines"
    android:layout_marginTop="@dimen/gen_page_margin_top"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">
 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="@dimen/gen_page_margin_bottom" 
        android:layout_marginBottom="@dimen/gen_page_margin_top" 
        android:layout_marginLeft="@dimen/gen_page_margin_left"
    	android:layout_marginRight="@dimen/gen_page_margin_right" >
        
        <TextView 
            android:id="@+id/txt_sign_up"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/login_font_size"
	        android:text="@string/sign_up_link"
	        android:textStyle="bold" />
        
        <TextView 
            android:id="@+id/txt_link_sign_in"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/login_text_size"
	        android:text="@string/sign_in_txt" 
	        android:layout_alignParentRight="true"
	        android:textColor="@color/sign_in_textcolor_darkblue"
			android:onClick="SwithToSignIn"/>
   </RelativeLayout>
   
    <EditText
        android:id="@+id/enterUsername"
        style="@style/loginDialog"
        android:layout_height="@dimen/login_edittext_height"
		android:layout_width="@dimen/login_edittext_width"
		android:hint="Email" />
        <requestFocus />
        
    <EditText
        android:id="@+id/enterPassword"
        style="@style/loginDialog"
        android:layout_height="@dimen/login_edittext_height"
		android:layout_width="@dimen/login_edittext_width"
        android:maxLines="1"
        android:hint="Password"
        android:password="true" />
    
     <EditText
        android:id="@+id/confirmPassword"
        style="@style/loginDialog"
        android:layout_height="@dimen/login_edittext_height"
		android:layout_width="@dimen/login_edittext_width"
        android:maxLines="1"
        android:hint="Re-enter password"
        android:password="true" />
     
     <CheckBox 
	        android:id="@+id/cb_agree_terms"
	        android:layout_marginLeft="@dimen/gen_page_margin_left"
    		android:layout_marginRight="@dimen/gen_page_margin_right"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/login_text_size"
	        android:text="@string/agree_terms"
	        android:onClick="onCheckboxClicked"/>
	 
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gen_page_margin_left"
    	android:layout_marginRight="@dimen/gen_page_margin_right"
    	android:layout_marginBottom="@dimen/gen_page_margin_bottom" >
        
        <Button
            android:id="@+id/sign_in"
            android:layout_width="@dimen/signup_btn_width"
            android:layout_height="@dimen/login_edittext_height"
            android:layout_alignParentRight="true"
            android:text="@string/create_account"
            style="@style/btnStyleBlue" />

    </RelativeLayout>
    
</LinearLayout>