<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/gen_page_margin_top"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/chart_area_all"
        android:layout_width="fill_parent"
        android:layout_height="260dip"
        android:background="@drawable/textlines"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <!-- trends chart section -->

        <FrameLayout
            android:id="@+id/chart_area"
            android:layout_width="fill_parent"
            android:layout_height="250dip"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <LinearLayout
                android:id="@+id/detail_hr_graph"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingRight="0dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_act_graph"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingRight="0dp" >
            </LinearLayout>
        </FrameLayout>

        <!-- title section -->

        <LinearLayout
            android:id="@+id/detail_title_section"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal|top"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/chart_double_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/text_shadow_white"
                android:text="@string/chart_double_prev"
                android:textStyle="bold" />

            <Button
                android:id="@+id/chart_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/text_shadow_white"
                android:text="@string/chart_prev"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:maxLines="2"
                android:scrollbars="vertical"
                android:text="@string/text1"
                android:textSize="@dimen/profile_text_size"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/chart_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/text_shadow_white"
                android:text="@string/chart_next"
                android:textStyle="bold" />

            <Button
                android:id="@+id/chart_double_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/text_shadow_white"
                android:text="@string/chart_double_next"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- </FrameLayout> -->
        <!-- icon and data section -->

        <LinearLayout
            android:id="@+id/detail_value_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:textSize="@dimen/trends_text_size" >

            <TextView
                android:id="@+id/chart_textView_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:text="@string/hr"
                android:textColor="@color/chart_hr_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_values_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/chart_hr_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_textView_bp_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:text="@string/bp_high"
                android:textColor="@color/chart_bp_high_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_values_bp_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/chart_bp_high_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_textView_bp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:text="@string/bp"
                android:textColor="@color/chart_bp_low_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_values_bp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/chart_bp_low_line"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_textView_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:text="@string/sleep"
                android:textColor="@color/chart_sleep_bar_high"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_values_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/chart_sleep_bar_high"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_textView_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:text="@string/activity"
                android:textColor="@color/chart_act_bar"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/chart_values_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:scrollbars="vertical"
                android:textColor="@color/chart_act_bar"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
    </FrameLayout>
    <!-- notes section -->

    <LinearLayout
        android:id="@+id/history_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textlines"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:gravity="center"
            android:maxLines="1"
            android:scrollbars="vertical"
            android:text="Event List"
            android:textSize="16dp"
            android:textStyle="bold" >
        </TextView>

        <ScrollView
            android:id="@+id/scrollHistorySection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/recordListSection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/gen_page_margin_top"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>